# ensemble-optimality-gap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_lumi.txt
experiments/: early_stopping.py  temperature_scaling.py  tuning.py
src/ensemble_optimality_gap/: data.py  ensembles.py  metrics.py
src/ensemble_optimality_gap/models/: __init__.py  batchensemble.py  gnn.py  lstm.py  wide_resnet.py
